--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center" >
-  <h1>
-    {{ title }}
-  </h1>
-  <app-countries> </app-countries>
-  <br><br><br><br><br>
-
-  <img width="300" alt="Angular Logo" 
+<img width="150" alt="Angular Logo" 
   src="../assets/cricketLogo.jpg">
-</div>
+  <h1>
+    <!-- {{ title }} -->
+  </h1>
+  <nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/countries"> Cricket Playing Nations</a>
+    </nav>
+  <!-- <app-countries> </app-countries> -->
+  <router-outlet> </router-outlet>
+  <app-messages></app-messages>
+
 
 
