--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -17,6 +17,6 @@
     </div>
     </div>
   </div> -->
-<app-country-details [country] ="selectedCountry"></app-country-details>
+<!-- <app-country-details [country] ="selectedCountry"></app-country-details> -->
 
 
