--- a/src/app/country-details/country-details.component.html
+++ b/src/app/country-details/country-details.component.html
@@ -6,4 +6,5 @@
 <input [(ngModel)]="country.name" placeholder="countryname">
 </label>
   </div>
+  <button (click)="goBack()">go back</button>
   </div>
