--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <h3> Top Nations</h3>
 <div class="grid grid-pad">
-  <a *ngFor = "let country of countries" class="col-1-4">
+  <a *ngFor = "let country of countries" class="col-1-4" routerLink="/detail/{{country.id}}">
+    
       <div class="module hero">
         <h4>{{country.name}}</h4>
+      </div>
+      </a>
 </div>
